--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "framework": "angular",
-  "buildCommand": "npm run build -- --configuration production",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist/weatheria-front"
 }
